<resources>
    <string name="app_name">pruebatec_todo1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account">Accounts</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_history_account">History Account</string>
    <string name="title_available_balance">Saldo Disponible</string>
    <string name="title_detail_and_movements">Ver detalle y movimientos</string>
    <string name="title_scan_qr">Scan QR</string>
    <string name="title_view_code">View Code</string>
    <string name="title_pay">Pay</string>
    <string name="title_recharge_account">Recargar Cuenta</string>
    <string name="text_input_user">Usuario</string>
    <string name="text_input_password">Pasword</string>
    <string name="text_input_description">Descripción</string>
    <string name="text_input_account">Tipo de cuenta</string>
    <string name="text_input_number">Numero</string>
    <string name="text_input_valor">Valor</string>
    <string name="text_button_login">Login</string>
    <string name="text_button_share">Compartir</string>
    <string name="text_button_generate">Generar codigo QR</string>
    <string name="text_button_pay">Pagar</string>
    <string name="retry">retry</string>
    <string name="text_message_error_field_empty_login">Los campos de usuario o contraseña se encuentra vacios</string>
    <string name="text_message_error_login">No fue posible iniciar sesion, intentalo nuevamente mas tarde.</string>
    <string name="unknown_error">Unknown Error</string>
</resources>