<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.recharge_account.RechargeAccountFragment">

    <data>
        <variable
            name="accounts"
            type="com.user.brayan.pruebatec_todo1.model.Accounts" />

        <variable
            name="codeQRGenerateCallback"
            type="com.user.brayan.pruebatec_todo1.ui.common.GenerateQRCodeCallback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20sp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTypeAccount"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/typeAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@{accounts.accountType}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_description"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tilTypeAccount">

            <com.google.android.material.textfield.TextInputEditText
                android:minLines="3"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:inputType="textMultiLine"
                android:textColor="@color/colorBlack" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_valor"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tilDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:minLines="3"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:inputType="numberDecimal"
                android:textColor="@color/colorBlack" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:onClick="@{() -> codeQRGenerateCallback.generate()}"
            android:stateListAnimator="@null"
            android:text="@string/text_button_generate"
            android:theme="@style/ThemeOverlay.App.ButtonColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>