<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pay.PayFragment">

    <data>
        <variable
            name="qrCode"
            type="com.user.brayan.pruebatec_todo1.model.QRCodes" />

        <variable
            name="payCallback"
            type="com.user.brayan.pruebatec_todo1.ui.common.PayCallback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20sp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTypeAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="top"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:inputType="textPersonName"
                android:text="@{qrCode.accountType}"
                android:textColor="@color/colorBlack" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tilTypeAccount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:enabled="false"
                android:gravity="top"
                android:inputType="textPersonName"
                android:text="@{qrCode.number}"
                android:textColor="@color/colorBlack" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tilNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:enabled="false"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:text="@{qrCode.description}"
                android:textColor="@color/colorBlack" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_valor"
            app:layout_constraintTop_toBottomOf="@+id/tilDescription"
            android:layout_marginTop="15sp"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:enabled="false"
                android:gravity="top"
                android:inputType="numberDecimal"
                android:minLines="3"
                android:text="@{qrCode.amount}"
                android:textColor="@color/colorBlack" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:onClick="@{() -> payCallback.pay()}"
            android:stateListAnimator="@null"
            android:text="@string/text_button_pay"
            android:theme="@style/ThemeOverlay.App.ButtonColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>