<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.Login">

    <data>
        <import type="android.view.View" />
        <import type="com.user.brayan.pruebatec_todo1.repository.Status" />
        <import type="com.user.brayan.pruebatec_todo1.model.InfoToken" />
        <import type="com.user.brayan.pruebatec_todo1.repository.Resource" />

        <variable
            name="tokenResult"
            type="androidx.lifecycle.LiveData&lt;Resource&lt;InfoToken>>" />

        <variable
            name="loginCallback"
            type="com.user.brayan.pruebatec_todo1.ui.common.LoginCallback" />

        <variable
            name="retryCallback"
            type="com.user.brayan.pruebatec_todo1.ui.common.RetryCallback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud_login">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35sp"
            android:background="@color/colorWhite"
            android:elevation="20dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="5sp"
                android:hint="@string/text_input_user"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:hint="@string/text_input_password"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/text_button_login"
                android:onClick="@{() -> loginCallback.login()}"
                app:visibleGone="@{tokenResult.status == Status.SUCCESS || tokenResult == null}"
                android:theme="@style/ThemeOverlay.App.ButtonColorPrimary" />

            <include
                layout="@layout/loading_state"
                app:resource="@{(Resource) tokenResult}"
                app:callback="@{() -> retryCallback.retry()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>